client/src/App.css
*,
*::before,
*::after{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}


/*Sign Up Css*/


:root {
    --primary-color: #f0f0f0;
    --text-color: #000000;
    --second-accent-color: #24ff1c;    
}

body{
    background-color:var(--primary-color);
}

.dark-mode {
    --primary-color: #141414;
    --text-color: #ffffff;

}

body.active-modal {
    overflow-y:hidden
}



/*Sign Up Css*/


.container {
    max-width: 750px;
    width: 100%;
    padding: 15rem 0;
    margin: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}


.form-container {
    border-radius: 10px;
    display: flex;
}
.logo-container {
    padding: 0 2rem;
    border-radius: 60%;
    background: var(--primary-color);
    display: flex;
    align-items: center;
    justify-content: center;
}


.logo-container h2 {
    font-size: 5rem;
    display: flex;
    align-items: center;
    justify-content: center;
}


.logo-container h2 span:nth-child(1){
    color:var(--text-color);
   
}


.logo-container h2 span:nth-child(2){
    color:#24ff1c;
    font-weight: normal;
}


.signup-container {
    padding: 1rem;
    display: flex;
    align-items: center;
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
}


.signup-form {
    text-align: center;
}


.signup-form h2{
    color:#24ff1c
}


.signup-form p {
    color: var(--text-color);
}


.signup-form input {
    outline: none;
    border: none;
    padding: 1rem;
    margin: 0.5rem;
    width: 90%;
    border-radius: 10px;
}


.signup-form button {
    border: none;
    outline: none;
    padding: 1rem;
    margin-bottom: 0.5rem;
    border-radius: 5px;
    background: #24ff1c;
    font-weight: bold;
    cursor: pointer;
}


/*Log In Css*/




.login-container {
    padding: 3rem 1rem;
    display: flex;
    align-items: center;
    border-bottom-right-radius: 10px;
    border-top-right-radius: 10px;
}


.login-form {
    text-align: center;
}


.login-form input {
    outline: none;
    border: none;
    padding: 1rem;
    margin: 1.5rem;
    width: 90%;
    border-radius: 10px;
}


.login-form button {
    border: none;
    outline: none;
    padding: 1rem;
    margin-bottom: 0.5rem;
    border-radius: 5px;
    background: #24ff1c;
    font-weight: bold;
    cursor: pointer;
}


.login-form h2 {
    color:#24ff1c;
}


.login-form p {
    color: var(--text-color);
}
/*NavBar css*/

.navbar-wrapper {
    height: 100vh;
    width: 350px;
    top: 0;
    position: sticky;
    background: var(--primary-color);
    box-shadow: 0 0 1px var(--text-color);
}

.navbar-container {
    padding: 0.75rem 0;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.top-navbar,
.bottom-navbar{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 0 1rem;
}

.top-navbar button,
.bottom-navbar button {
    border:none;
    font-size: 1rem;
    background: none;

}

.top-navbar a,
.top-navbar button,
.bottom-navbar button{
    padding: .75rem 1rem;
    display: flex;
    align-items: center;
    border-radius: 5px;
    list-style: none;
    text-decoration: none;
    color: var(--text-color);
    cursor: pointer;
    transition: background-color ease 0.3s,
                color ease 0.3s;
}

.top-navbar a:hover:not(a:nth-child(1)),
.top-navbar button:hover,
.bottom-navbar button:hover {
    background: var(--second-accent-color);
    color: var(--primary-color);
}


.top-navbar a:nth-child(1) {
    font-size: 2rem;
    margin-bottom: 0.75rem;
}

.top-navbar a:nth-child(1) span:nth-child(1) {
    color: var(--text-color);  
}

.top-navbar a:nth-child(1) span:nth-child(2) {
    color: var(--second-accent-color)
}

.top-navbar a:nth-child(1) span:nth-child(3),
.top-navbar a:nth-child(1) span:nth-child(4){
    display: none;
}


.top-navbar a span:not(a:nth-child(1) span),
.top-navbar button span,
.bottom-navbar span {
    margin-left: 1rem;
}

.filter-button {
    width: 100%;
    position: relative;
}

.filter-button span:nth-child(3) {
    opacity: 1;
    position: absolute;
    right: 10%;
}


.filter-container{
    width: 100%;
    height: 2px;
    position: relative;
}

.filter-list{
    --menu-Y: 3rem;
    list-style:none;
    display:flex;
    flex-direction: column;
    gap: 0.25rem;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    margin: auto
}


.filter-list.menu-active {
    opacity: 1;
    z-index: 1;
    transform: translateY(var(--menu-Y));
    transition: 0.3s ease;
}

.filter-list.menu-inactive {
    opacity: 0;
    z-index: -1;
    transform: translateY(calc(var(--menu-Y) - 1rem));
    transition: 0.3s ease;
}


.filter-list li {
    color: var(--text-color);
    padding: 0.5rem 0.5rem;
    display:flex;
    align-items: center;
    justify-content:center;
    border-radius: 5px;
    cursor: pointer;
}

.filter-list li:hover {
    background:rgba(138, 134, 134, 0.4)
}

@media (width < 1350px) {

    .top-navbar a span:nth-child(2),
    .top-navbar a:nth-child(1) span:nth-child(1),
    .top-navbar button span:nth-child(3),
    .top-navbar button span:nth-child(4),   
    .top-navbar button span:nth-child(2),
    .bottom-navbar button span:nth-child(2) {
        display: none;
    }

    .top-navbar a:nth-child(1) span:nth-child(3),
    .top-navbar a:nth-child(1) span:nth-child(4) {
        font-size: 1.5rem;
        display: block;
    }

    .top-navbar a:nth-child(1) span:nth-child(4) {
        color: var(--second-accent-color);
    }



    .navbar-wrapper {
        width: 90px;
    }


}
/* ... */

